--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -1,19 +1,19 @@
 /* RESETS */
-*,
-*::before,
-*::after {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 *:focus {
-  outline: 3px dashed #228bec;
+  outline: 1px solid #919191;
   outline-offset: 0;
 }
-html {
-  font: 62.5% / 1.15 sans-serif;
+a {
+  margin: 1rem;
+  margin-bottom: 1rem;
 }
 h1,
 h2 {
   margin-bottom: 0;
+  text-align: center;
 }
 ul {
   list-style: none;
@@ -36,18 +36,13 @@ button {
 button::-moz-focus-inner {
   border: 0;
 }
-button,
-input,
-optgroup,
-select,
-textarea {
+button, input, optgroup, select, textarea {
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
-button,
-input {
+button, input {
   overflow: visible;
 }
 input[type="text"] {
@@ -55,97 +50,17 @@ input[type="text"] {
 }
 body {
   width: 100%;
-  max-width: 68rem;
   margin: 0 auto;
-  font: 1.6rem/1.25 Arial, sans-serif;
   background-color: #131313;
   color: #4d4d4d;
 }
 @media screen and (min-width: 620px) {
   body {
-    font-size: 1.9rem;
+    font-size: 1.5rem;
     line-height: 1.31579;
   }
 }
 /*END RESETS*/
-
-/* GLOBAL STYLES */
-.form-group > input[type="text"] {
-  display: inline-block;
-  margin-top: 0.4rem;
-}
-.btn {
-  padding: 0.8rem 1rem 0.7rem;
-  border: 0.2rem solid #4d4d4d;
-  cursor: pointer;
-  text-transform: capitalize;
-}
-.btn.toggle-btn {
-  border-width: 1px;
-  border-color: #d3d3d3;
-}
-.btn.toggle-btn[aria-pressed="true"] {
-  text-decoration: underline;
-  border-color: #4d4d4d;
-}
-.btn__danger {
-  color: #fff;
-  background-color: #ca3c3c;
-  border-color: #bd2130;
-}
-.btn__filter {
-  border-color: lightgrey;
-}
-.btn__primary {
-  color: #fff;
-  background-color: #000;
-}
-.btn-group {
-  display: flex;
-  justify-content: space-between;
-}
-.btn-group > * {
-  flex: 1 1 49%;
-}
-.btn-group > * + * {
-  margin-left: 0.8rem;
-}
-.label-wrapper {
-  margin: 0;
-  flex: 0 0 100%;
-  text-align: center;
-}
-.visually-hidden {
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px, 1px);
-  white-space: nowrap;
-}
-[class*="stack"] > * {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.stack-small > * + * {
-  margin-top: 1.25rem;
-}
-.stack-large > * + * {
-  margin-top: 2.5rem;
-}
-@media screen and (min-width: 550px) {
-  .stack-small > * + * {
-    margin-top: 1.4rem;
-  }
-  .stack-large > * + * {
-    margin-top: 2.8rem;
-  }
-}
-.stack-exception {
-  margin-top: 1.2rem;
-}
-/* END GLOBAL STYLES */
 
 .todoapp {
   background: #fff;
@@ -160,7 +75,6 @@ body {
   }
 }
 .todoapp > * {
-  max-width: 50rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -196,11 +110,6 @@ body {
 }
 [class*="__lg"]:not(:last-child) {
   margin-bottom: 1rem;
-}
-@media screen and (min-width: 620px) {
-  [class*="__lg"] {
-    font-size: 2.4rem;
-  }
 }
 .filters {
   width: 100%;
@@ -274,7 +183,7 @@ body {
 }
 .c-cb > input[type="checkbox"]:focus + label::before {
   border-width: 4px;
-  outline: 3px dashed #228bec;
+  outline: 1px solid #919191;
 }
 .c-cb > label::after {
   box-sizing: content-box;
