--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -50,6 +50,7 @@ input[type="text"] {
 }
 body {
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
   background-color: #131313;
   color: #4d4d4d;
@@ -63,9 +64,8 @@ body {
 /*END RESETS*/
 
 .todoapp {
-  background: #fff;
   margin: 2rem 0 4rem 0;
-  padding: 1rem;
+  width: 70vw;
   position: relative;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2.5rem 5rem 0 rgba(0, 0, 0, 0.1);
 }
@@ -134,6 +134,10 @@ body {
 .todo-text:focus {
   box-shadow: inset 0 0 0 2px;
 }
+.status-container {
+  display: flex;
+  justify-content: flex-end;
+}
 
 /* CHECKBOX STYLES */
 .c-cb {
@@ -149,57 +153,6 @@ body {
   padding-left: 40px;
   clear: left;
 }
-.c-cb > label::before,
-.c-cb > input[type="checkbox"] {
-  box-sizing: border-box;
-  top: -2px;
-  left: -2px;
-  width: 44px;
-  height: 44px;
-}
-.c-cb > input[type="checkbox"] {
-  -webkit-font-smoothing: antialiased;
-  cursor: pointer;
-  position: absolute;
-  z-index: 1;
-  margin: 0;
-  opacity: 0;
-}
-.c-cb > label {
-  font-size: inherit;
-  font-family: inherit;
-  line-height: inherit;
-  display: inline-block;
-  margin-bottom: 0;
-  padding: 8px 15px 5px;
-  cursor: pointer;
-  touch-action: manipulation;
-}
-.c-cb > label::before {
-  content: "";
-  position: absolute;
-  border: 2px solid currentColor;
-  background: transparent;
-}
-.c-cb > input[type="checkbox"]:focus + label::before {
-  border-width: 4px;
-  outline: 1px solid #919191;
-}
-.c-cb > label::after {
-  box-sizing: content-box;
-  content: "";
-  position: absolute;
-  top: 11px;
-  left: 9px;
-  width: 18px;
-  height: 7px;
-  transform: rotate(-45deg);
-  border: solid;
-  border-width: 0 0 5px 5px;
-  border-top-color: transparent;
-  opacity: 0;
-  background: transparent;
-}
-.c-cb > input[type="checkbox"]:checked + label::after {
-  opacity: 1;
+label {
+  margin-right: 1rem;
 }
