--- a/stack/views/author_detail.pug
+++ b/stack/views/author_detail.pug
@@ -3,12 +3,11 @@ extends layout
 block content
 
   h1 Author: #{author.name}
-  p #{author.date_of_birth} - #{author.date_of_death}
+  if author.lifespan
+    p #{author.date_of_birth_formatted} - #{author.date_of_death_formatted}
 
   div(style='margin-left:20px;margin-top:20px')
-
     h4 Books
-
     dl
       each book in author_books
         dt
@@ -17,3 +16,7 @@ block content
 
       else
         p This author has no books.
+
+  hr
+  p
+    a(href=author.url+'/delete') Delete author
